--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,7 @@
-
-
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=EF1DF581434EB9D9BFAD86B1D6E4CD16
+ProjectID=78D32A8441B2A0F6F4AAD6A7CA206150
+ProjectName=Top Down BP Game Template
+
 
 [StartupActions]
 bAddPacks=True
